--- a/index.html
+++ b/index.html
@@ -37,10 +37,20 @@
         <div class="mail-tel">
           <ul class="contacts list">
             <li class="contacts-item">
-              <a href="mailto:info@devstudio.com" class="contacts-link link">info@devstudio.com</a>
+              <a href="mailto:info@devstudio.com" class="contacts-link link">
+                <svg class="contacts-icon" width="16" height="12">
+                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
+              >
             </li>
             <li class="contacts-item">
-              <a href="tel:+380961111111" class="contacts-link link">+38 096 111 11 11</a>
+              <a href="tel:+380961111111" class="contacts-link link">
+                <svg class="contacts-icon" width="10" height="16">
+                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
           </ul>
         </div>
