--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li class="contacts-item">
               <a href="mailto:info@devstudio.com" class="contacts-link link">
                 <svg class="contacts-icon" width="16" height="12">
-                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                  <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
               >
@@ -47,7 +47,7 @@
             <li class="contacts-item">
               <a href="tel:+380961111111" class="contacts-link link">
                 <svg class="contacts-icon" width="10" height="16">
-                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                  <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a
               >
@@ -71,24 +71,44 @@
           <h2 class="benefits-title visually-hidden">Наши преимущества</h2>
           <ul class="benefits-list list">
             <li class="benefits-item">
+              <div class="box-icon">
+                <svg class="benefits-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="benefits-item">
+              <div class="box-icon">
+                <svg class="benefits-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="benefits-item">
+              <div class="box-icon">
+                <svg class="benefits-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="benefits-item">
+              <div class="box-icon">
+                <svg class="benefits-icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-subtitle">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
