--- a/index.html
+++ b/index.html
@@ -335,29 +335,64 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" lang="en" class="logo link"
-          >Web<span class="footer-studio">Studio</span></a
-        >
-        <address class="address">
-          <ul class="address-list list">
-            <li class="address-item">
-              <a
-                href="https://goo.gl/maps/AvHcMsAXRG9aYV4q9"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="address-link link"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
+      <div class="container footerflex">
+        <div class="footer-contacts">
+          <a href="./index.html" lang="en" class="logo link"
+            >Web<span class="footer-studio">Studio</span></a
+          >
+          <address class="address">
+            <ul class="address-list list">
+              <li class="address-item">
+                <a
+                  href="https://goo.gl/maps/AvHcMsAXRG9aYV4q9"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="address-link link"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li class="address-item">
+                <a href="mailto:info@devstudio.com" class="address-mail link">info@devstudio.com</a>
+              </li>
+              <li class="address-item">
+                <a href="tel:+380961111111" class="address-tel link">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-social">
+          <h2 class="footer-title">Присоединяйтесь</h2>
+          <ul class="footer-list list">
+            <li class="footer-item">
+              <a href="" class="footer-link link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-item">
-              <a href="mailto:info@devstudio.com" class="address-mail link">info@devstudio.com</a>
+            <li class="social-item">
+              <a href="" class="footer-link link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="address-item">
-              <a href="tel:+380961111111" class="address-tel link">+38 096 111 11 11</a>
+            <li class="social-item">
+              <a href="" class="footer-link link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-item">
+              <a href="" class="footer-link link">
+                <svg class="social-icon" width="20" height="20">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
