--- a/portfolio.html
+++ b/portfolio.html
@@ -79,72 +79,90 @@
           </ul>
           <ul class="example-list list">
             <li class="example-item">
-              <img class="photo" src="./images/img8.jpg" alt="ноутбук" width="370" />
-              <div class="photo-title">
-                <h2 class="example-title">Технокряк</h2>
-                <p class="example-text">Веб-сайт</p>
-              </div>
+              <a href="" class="example-link link">
+                <img class="photo" src="./images/img8.jpg" alt="ноутбук" width="370" />
+                <div class="photo-title">
+                  <h2 class="example-title">Технокряк</h2>
+                  <p class="example-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="example-item">
-              <img class="photo" src="./images/img9.jpg" alt="баскетболисты" width="370" />
-              <div class="photo-title">
-                <h2 class="example-title">Постер New Orlean vs Golden Star</h2>
-                <p class="example-text">Дизайн</p>
-              </div>
+              <a href="" class="example-link link">
+                <img class="photo" src="./images/img9.jpg" alt="баскетболисты" width="370" />
+                <div class="photo-title">
+                  <h2 class="example-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="example-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="example-item">
-              <img class="photo" src="./images/img10.jpg" alt="логотип ресторана" width="370" />
-              <div class="photo-title">
-                <h2 class="example-title">Ресторан Seafood</h2>
-                <p class="example-text">Приложение</p>
-              </div>
+              <a href="" class="example-link link">
+                <img class="photo" src="./images/img10.jpg" alt="логотип ресторана" width="370" />
+                <div class="photo-title">
+                  <h2 class="example-title">Ресторан Seafood</h2>
+                  <p class="example-text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="example-item">
-              <img class="photo" src="./images/img11.jpg" alt="наушники" width="370" />
-              <div class="photo-title">
-                <h2 class="example-title">Проект Prime</h2>
-                <p class="example-text">Маркетинг</p>
-              </div>
+              <a href="" class="example-link link">
+                <img class="photo" src="./images/img11.jpg" alt="наушники" width="370" />
+                <div class="photo-title">
+                  <h2 class="example-title">Проект Prime</h2>
+                  <p class="example-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="example-item">
-              <img class="photo" src="./images/img12.jpg" alt="коробки" width="370" />
-              <div class="photo-title">
-                <h2 class="example-title">Проект Boxes</h2>
-                <p class="example-text">Приложение</p>
-              </div>
+              <a href="" class="example-link link">
+                <img class="photo" src="./images/img12.jpg" alt="коробки" width="370" />
+                <div class="photo-title">
+                  <h2 class="example-title">Проект Boxes</h2>
+                  <p class="example-text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="example-item">
-              <img class="photo" src="./images/img13.jpg" alt="монитор" width="370" />
-              <div class="photo-title">
-                <h2 class="example-title">Inspiration has no Borders</h2>
-                <p class="example-text">Веб-сайт</p>
-              </div>
+              <a href="" class="example-link link">
+                <img class="photo" src="./images/img13.jpg" alt="монитор" width="370" />
+                <div class="photo-title">
+                  <h2 class="example-title">Inspiration has no Borders</h2>
+                  <p class="example-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="example-item">
-              <img class="photo" src="./images/img14.jpg" alt="журнал" width="370" />
-              <div class="photo-title">
-                <h2 class="example-title">Издание Limited Edition</h2>
-                <p class="example-text">Дизайн</p>
-              </div>
+              <a href="" class="example-link link">
+                <img class="photo" src="./images/img14.jpg" alt="журнал" width="370" />
+                <div class="photo-title">
+                  <h2 class="example-title">Издание Limited Edition</h2>
+                  <p class="example-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="example-item">
-              <img class="photo" src="./images/img15.jpg" alt="бирка" width="370" />
-              <div class="photo-title">
-                <h2 class="example-title">Проект LAB</h2>
-                <p class="example-text">Маркетинг</p>
-              </div>
+              <a href="" class="example-link link">
+                <img class="photo" src="./images/img15.jpg" alt="бирка" width="370" />
+                <div class="photo-title">
+                  <h2 class="example-title">Проект LAB</h2>
+                  <p class="example-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="example-item">
-              <img
-                class="photo"
-                src="./images/img16.jpg"
-                alt="человек работает за ноутбуком"
-                width="370"
-              />
-              <div class="photo-title">
-                <h2 class="example-title">Growing Business</h2>
-                <p class="example-text">Приложение</p>
-              </div>
+              <a href="" class="example-link link">
+                <img
+                  class="photo"
+                  src="./images/img16.jpg"
+                  alt="человек работает за ноутбуком"
+                  width="370"
+                />
+                <div class="photo-title">
+                  <h2 class="example-title">Growing Business</h2>
+                  <p class="example-text">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
